--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@vercel/speed-insights": "^1.0.12",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
