--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/speed-insights": "^1.0.12",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
+    "motion": "^12.0.5",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
